# Seetaface6JNI_cmake

./: CMakeLists.txt  README.md
FaceAntiSpoofingX6/: CMakeLists.txt  JNIFaceAntiSpoofing.cpp
FaceBoxes/: CMakeLists.txt  JNIFaceDetector.cpp
FaceRecognizer6/: CMakeLists.txt  JNIFaceRecognizer.cpp
FaceTracker6/: CMakeLists.txt  JNIFaceTracker.cpp  jni_struct.hpp
Landmarker/: CMakeLists.txt  JNIFaceLandmarker.cpp
PoseEstimator6/: CMakeLists.txt  JNIPoseEstimator.cpp  jni_struct.hpp
QualityAssessor3/: CMakeLists.txt  JNIQualityOfLBN.cpp  JNIQualityOfPoseEx.cpp
SeetaAgePredictor/: CMakeLists.txt
SeetaEyeStateDetector/: CMakeLists.txt
SeetaGenderPredictor/: CMakeLists.txt
SeetaMaskDetector/: CMakeLists.txt
include/orz/mem/: pot.h
include/seeta/: AgePredictor.h  CFaceDetector.h  CFaceInfo.h  CTrackingFaceInfo.h  EyeStateDetector.h  FaceDatabase.h  FaceLandmarker.h  FaceRecognizer.h  FaceTracker.h  GenderPredictor.h  MaskDetector.h  PoseEstimator.h  QualityAssessor.h  QualityOfLBN.h  QualityStructure.h
